--- a/food/index.html
+++ b/food/index.html
@@ -34,6 +34,9 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>苓雅 & 新興</h2>
+          <p><a target="_blank" class="fw-bold" href="https://croatian.com.tw/zh/">莎曉克羅埃西亞廚房<small> | 漢神百貨</small></a>
+            <br>苓雅區光明街83號
+          </p>
           <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/lzxst">瀧澤軒食堂<small> | 文化中心</small></a>
             <br>苓雅區林泉街44號
           </p>
@@ -60,6 +63,9 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>三民 & 左營</h2>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/linkcafe216/">凱琳咖啡<small> | 大昌二路</small></a>
+            <br>三民區春陽街122號
+          </p>
           <p><a target="_blank" class="fw-bold" href="https://doyouhavebeefnoodles.com/">有沒有牛肉麵三民<small> | 輕軌高雄高工</small></a>
             <br>三民區建工路479號
           </p>
