--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IiSbiYJZT21e1a0BYfywz8">THE FIRST TAKE</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">KPOP Live</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3oP0XWAUBtA3ayoeVSwP-">KPOP Solo</a></p>
-                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07703/a07/">威秀影城</a></p>
-                <p><a target="_blank" href="http://www.atmovies.com.tw/showtime/t07704/a07/">環球影城</a></p>
+                <p><a target="_blank" href="https://www.u-movie.com.tw/cinema/page.php?page_type=now">環球影城</a></p>
+                <p><a target="_blank" href="https://www.vscinemas.com.tw/theater/detail.aspx?id=18">威秀影城</a></p>
             </div>
         </div>
     </div>
