update food and misc

--- a/food/index.html
+++ b/food/index.html
@@ -24,11 +24,17 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>鳳山 & 前鎮</h2>
-          <p><a target="_blank" class="fw-bold" href="https://www.instagram.com/pureway_fengshan/">璞味綿綿冰鳳山<small> | 黃埔新村</small></a>
+          <p><a target="_blank" class="fw-bold" href="https://www.instagram.com/pureway_fengshan/">璞味綿綿冰</a>
             <br>鳳山區黃埔新村西四巷38號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/suxiangju">酥香居</a>
+            <br>鳳山區青年路二段253號
           </p>
           <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/Kashiwagi0827/">咕嚕咕嚕家<small> | 五甲家樂福</small></a>
             <br>鳳山區五甲二路468號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://hoolee.tw/burger-gram/">漢堡克<small> | 三多商圈</small></a>
+            <br>前鎮區林森三路87號
           </p>
         </div>
 
@@ -37,17 +43,20 @@
           <p><a target="_blank" class="fw-bold" href="https://croatian.com.tw/zh/">莎曉克羅埃西亞廚房<small> | 漢神百貨</small></a>
             <br>苓雅區光明街83號
           </p>
-          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/lzxst">瀧澤軒食堂<small> | 文化中心</small></a>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/lzxst">瀧澤軒食堂</a>
             <br>苓雅區林泉街44號
-          </p>
-          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/suxiangju">酥香居<small> | 蘋果市集</small></a>
-            <br>苓雅區武廟路135巷9號
           </p>
           <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/profile.php?id=100092438770416">巴索托咖啡館<small> | 文化中心</small></a>
             <br>苓雅區林南街6號
           </p>
           <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/OstarAllstar">歐仕達<small> | 信義國小</small></a>
             <br>新興區仁愛一街98號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://17spanishbistro.mystrikingly.com/">17西班牙料理<small> | 信義國小</small></a>
+            <br>新興區中正三路80巷36號
+          </p>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/alleylife082/">小巷生活豆花<small> | 信義國小</small></a>
+            <br>新興區達仁街82號
           </p>
         </div>
 
@@ -63,10 +72,10 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>三民 & 左營</h2>
-          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/linkcafe216/">凱琳咖啡<small> | 大昌二路</small></a>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/linkcafe216/">凱琳咖啡</a>
             <br>三民區春陽街122號
           </p>
-          <p><a target="_blank" class="fw-bold" href="https://doyouhavebeefnoodles.com/">有沒有牛肉麵三民<small> | 輕軌高雄高工</small></a>
+          <p><a target="_blank" class="fw-bold" href="https://doyouhavebeefnoodles.com/">有沒有牛肉麵<small> | 輕軌高雄高工</small></a>
             <br>三民區建工路479號
           </p>
           <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/profile.php?id=61558480287016">祤棠鐵板燒<small> | 漢神巨蛋</small></a>
@@ -75,10 +84,7 @@
           <p><a target="_blank" class="fw-bold" href="https://angelala.tw/rui-fish/">瑞弘號鮮魚湯*<small> | 自由市場</small></a>
             <br>左營區自由二路426之1號
           </p>
-          <p><a target="_blank" class="fw-bold" href="https://yuexinfang.weebly.com/">粵心坊博愛<small> | 生態園區</small></a>
-            <br>左營區博愛三路336號
-          </p>
-          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/minge8.0">旻哥古早味鼎山<small> | 鼎山家樂福</small></a>
+          <p><a target="_blank" class="fw-bold" href="https://www.facebook.com/minge8.0">旻哥古早味<small> | 鼎山家樂福</small></a>
             <br>三民區鼎山街492號
           </p>
           <p><a target="_blank" class="fw-bold" href="https://angelala.tw/fu-thai-thai/">腹泰泰泰式便當<small> | 漢神巨蛋</small></a>
