--- a/misc/index.html
+++ b/misc/index.html
@@ -94,8 +94,12 @@
           <p><a target="_blank" href="https://www.investopedia.com/simulator/">Investopedia Stock Simulator</a></p>
 
           <h2>其它</h2>
-          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj-inRiUwiV4-CtARX9GTIix">VSD<b>膜邊型</b>5.25mm</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj_rehHLU6YBCu-AJbax4ERZ">上駿客服</p>
+          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj-inRiUwiV4-CtARX9GTIix">VSD膜邊型5.25mm</a></p>
+        </div>
+
+        <div class="col-lg-3 col-md-6">
+          <h2>鄰居資訊</h2>
+          <p>圜興電器 | 武營路94號</p>
         </div>
       </div>
     </div>
