--- a/misc/index.html
+++ b/misc/index.html
@@ -80,6 +80,7 @@
 
         <div class="col-lg-3 col-md-6">
           <h2>工具</h2>
+          <p><a target="_blank" href="https://blog.104.com.tw/ai_tools/">AI 懶人包</a></p>
           <p><a target="_blank" href="https://websim.ai/">websim.ai</a></p>
           <p><a target="_blank" href="https://edublocks.org/">EduBlocks</a></p>
           <p><a target="_blank" href="https://www.khanacademy.org/khan-labs">Khanmigo</a></p>
