--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="container page-main mb-5">
         <div class="row">
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>生活</h2>
                 <p><a target="_blank" href="https://mail.google.com/">Gmail</a></p>
                 <p><a target="_blank" href="https://www.facebook.com/">Facebook</a></p>
@@ -29,57 +29,7 @@
                 <p><a target="_blank" href="https://24h.pchome.com.tw/index/">PChome購物</a></p>
             </div>
 
-            <div class="col-lg-3 col-md-6">
-                <h2>學習</h2>
-                <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
-                <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
-                <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python Books</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@JunyiAcademy">均一教育平台</a></p>
-                <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
-                <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
-            </div>
-
-            <div class="col-lg-3 col-md-6">
-                <h2>外語</h2>
-                <p><a target="_blank" href="https://www.youtube.com/@snoweienglish">雪薇英文</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@SpeakEnglishWithVanessa">English with Vanessa</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@yuka_japaneseteacher">Japanese with Yuka</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/@KoreanwithMissVicky">Korean with Miss Vicky</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=tpIctyqH29Q&list=PL8dPuuaLjXtNlUrzyH5r6jN9ulIgZBpdo">CS Preview</a></p>
-            </div>
-
-            <div class="col-lg-3 col-md-6">
-                <h2>女團</h2>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">i-dle</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3SBBuk4ep4jrkO8T8CB_w">BABYMONSTER</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">aespa</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">IVE</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LRprpMqFJtEnLQL2bCjWMn">Collection</a></p>
-            </div>
-
-            <div class="col-lg-3 col-md-6">
-                <h2>證券</h2>
-                <p><a target="_blank" href="https://www.cnyes.com/">鉅亨網</a></p>
-                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel 股感</a></p>
-                <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
-                <p><a target="_blank" href="https://www.stockq.org/">StockQ 國際股市指數</a></p>
-                <p><a target="_blank" href="https://www.finlab.tw/">FinLab 財經實驗室</a></p>
-                <p><a target="_blank" href="https://rich01.com/">Mr.Market 市場先生</a></p>
-            </div>
-
-            <div class="col-lg-3 col-md-6">
-                <h2>競程</h2>
-                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
-                <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
-                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Meta Hacker Cup</a></p>
-                <p><a target="_blank" href="https://judge.u-aizu.ac.jp/onlinejudge/">Aizu Online Judge</a></p>
-                <p><a target="_blank" href="https://atcoder.jp/">AtCoder</a></p>
-                <p><a target="_blank" href="https://codeforces.com/">Codeforces</a></p>
-            </div>
-
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>工作</h2>
                 <p><a target="_blank" href="https://www.canva.com/">Canva</a></p>
                 <p><a target="_blank" href="https://github.com/">GitHub</a></p>
@@ -89,12 +39,77 @@
                 <p><a target="_blank" href="https://ksisunion.com/">ksisunion</a></p>
             </div>
 
-            <div class="col-lg-3 col-md-6">
+            <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>KPOP I</h2>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IiSbiYJZT21e1a0BYfywz8">THE FIRST TAKE</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">i-dle</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3SBBuk4ep4jrkO8T8CB_w">BABYMONSTER</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">aespa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">IVE</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>外語</h2>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=kksyQn0RFDM&list=PLcPfCJuIgV5pNIga-dzEZmDTA1x16TO55">En - Snowei</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=GEogN8Kd6-s&list=PLKWcPfZiScgAutnWOSAh2AH026L9w8c18">En - Vanessa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=2JecKsbsswE&list=PLzMXToX8KzqgNnm7qjeHR7jFSuaeESFFQ">En - Lucy</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=3M1UOCKgVhs&list=PLN-ztDeY62dAE8yGu0AeZ6S_7-7HBdaIu">Ja - Yuka</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=85qJXvyFrIc&list=PLECz2rpRD3Z0EeOU0z3aoafwgjHyth7MN">Ko - Vicky</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=lf264NlA85M&list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">Vi - Qine</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>證券</h2>
+                <p><a target="_blank" href="https://www.cnyes.com/">鉅亨網</a></p>
+                <p><a target="_blank" href="https://www.stockfeel.com.tw/">StockFeel</a></p>
+                <p><a target="_blank" href="https://www.cmoney.tw/vt/">股市大富翁</a></p>
+                <p><a target="_blank" href="https://www.stockq.org/">StockQ</a></p>
+                <p><a target="_blank" href="https://www.finlab.tw/">FinLab</a></p>
+                <p><a target="_blank" href="https://rich01.com/">Mr.Market</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>競程</h2>
+                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
+                <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
+                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Meta Hacker Cup</a></p>
+                <p><a target="_blank" href="https://judge.u-aizu.ac.jp/onlinejudge/">Aizu Online Judge</a></p>
+                <p><a target="_blank" href="https://atcoder.jp/">AtCoder</a></p>
+                <p><a target="_blank" href="https://codeforces.com/">Codeforces</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>AI</h2>
+                <p><a target="_blank" href="https://auth.openai.com/log-in">ChatGPT</a></p>
+                <p><a target="_blank" href="https://gemini.google.com/app">Gemini</a></p>
+                <p><a target="_blank" href="https://accounts.x.ai/sign-in">Grok</a></p>
+                <p><a target="_blank" href="https://claude.ai/login">Claude</a></p>
+                <p><a target="_blank" href="https://www.perplexity.ai/">Perplexity</a></p>
+                <p><a target="_blank" href="https://copilot.microsoft.com/login">Copilot</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>學習</h2>
+                <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
+                <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
+                <p><a target="_blank" href="https://www.tenlong.com.tw/search?keyword=python&langs=zh_tw&sort=publication_date">Python Books</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@JunyiAcademy">均一教育平台</a></p>
+                <p><a target="_blank" href="https://open.163.com/khan/">網易公開課</a></p>
+                <p><a target="_blank" href="https://www.khanacademy.org/">Khan Academy</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>KPOP II</h2>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LRprpMqFJtEnLQL2bCjWMn">Collection</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Live</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3oP0XWAUBtA3ayoeVSwP-">Solo</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IiSbiYJZT21e1a0BYfywz8">THE FIRST TAKE</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">KPOP Live</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3oP0XWAUBtA3ayoeVSwP-">KPOP Solo</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=4c6tZv4vxDo&list=PL41R2vH_CL438IdCl6fo74Ygsp9Eb2nr6">肯德拉英語</a></p>
                 <p><a target="_blank" href="https://www.u-movie.com.tw/cinema/page.php?page_type=now">環球影城</a></p>
                 <p><a target="_blank" href="https://www.vscinemas.com.tw/theater/detail.aspx?id=18">威秀影城</a></p>
             </div>
