--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>外語</h2>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=kksyQn0RFDM&list=PLcPfCJuIgV5pNIga-dzEZmDTA1x16TO55">En - Snowei</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=GEogN8Kd6-s&list=PLKWcPfZiScgAutnWOSAh2AH026L9w8c18">En - Vanessa</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=2JecKsbsswE&list=PLzMXToX8KzqgNnm7qjeHR7jFSuaeESFFQ">En - Lucy</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=3M1UOCKgVhs&list=PLN-ztDeY62dAE8yGu0AeZ6S_7-7HBdaIu">Ja - Yuka</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=85qJXvyFrIc&list=PLECz2rpRD3Z0EeOU0z3aoafwgjHyth7MN">Ko - Vicky</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=lf264NlA85M&list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">Vi - Qine</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=kksyQn0RFDM&list=PLcPfCJuIgV5pNIga-dzEZmDTA1x16TO55">英文 Snowei</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=GEogN8Kd6-s&list=PLKWcPfZiScgAutnWOSAh2AH026L9w8c18">英語 Vanessa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=2JecKsbsswE&list=PLzMXToX8KzqgNnm7qjeHR7jFSuaeESFFQ">英語 Lucy</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=3M1UOCKgVhs&list=PLN-ztDeY62dAE8yGu0AeZ6S_7-7HBdaIu">日語 Yuka</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=85qJXvyFrIc&list=PLECz2rpRD3Z0EeOU0z3aoafwgjHyth7MN">韓語 Vicky</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/watch?v=lf264NlA85M&list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">越南語 Qine</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
