--- a/porn/index.html
+++ b/porn/index.html
@@ -22,20 +22,13 @@
     <div class="container page-porn mb-5">
       <div class="row">
         <div class="col-lg-3 col-md-6">
-          <h2>Pornstar 1/2</h2>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph632b26028a399">Haley Reed<small> | DDF Network</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph597f4cb354f3c">Haley Reed<small> | New Sensations</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph5ecd5fa119b63">Haley Reed<small> | Property Sex</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph5ee186d35cc63">Haley Reed<small> | Holed</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph5c38abe2b6289">Melody Marks<small> | Shot Her First</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph61ec9a7bed577">Melody Marks<small> | deepinsex</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=659cca7aae529">Melody Marks<small> | Bratty Sis</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph625c47a5910bd">Melody Marks<small> | Lethal Hardcore</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65431ee8356de">Mia Malkova<small> | Naughty America</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=ph558c5d5d00a8a">Mia Malkova<small> | Twistys</small></a></p>
+          <h2>Collection I</h2>
+          <p><a target="_blank" href="https://pornhub.com/channels/bratty-sis/videos?o=ra">Bratty Sis</a></p>
+          <p><a target="_blank" href="https://pornhub.com/channels/faketaxi/videos?o=ra">Fake Taxi</a></p>
+          <p><a target="_blank" href="https://pornhub.com/channels/property-sex/videos?o=ra">Property Sex</a></p>
         </div>
         <div class="col-lg-3 col-md-6">
-          <h2>Pornstar 2/2</h2>
+          <h2>Collection</h2>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=64dd5785a67fe">Lila Love<small> | Bratty Sis</small></a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65083f19a771e">Scarlett Jones<small> | Digital Playground</small></a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=65379a13dd4ec">Adriana Chechik<small> | Fucked Hard 18</small></a></p>
@@ -45,7 +38,6 @@
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=6633dcec7f28f">Xxlayna Marie<small> | Step Siblings Caught</small></a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=66447ac6b24ad">Dillion Harper<small> | Fucked Hard 18</small></a></p>
           <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=66478f5064905">Kay Carter<small> | Hot Wife XXX</small></a></p>
-          <p><a target="_blank" href="https://www.pornhub.com/view_video.php?viewkey=6650f68717e22">Gina Valentina<small> | Property Sex</small></a></p>
         </div>
         <div class="col-lg-3 col-md-6">
           <h2>Model</h2>
