--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>外語</h2>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=kksyQn0RFDM&list=PLcPfCJuIgV5pNIga-dzEZmDTA1x16TO55">英文 Snowei</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=GEogN8Kd6-s&list=PLKWcPfZiScgAutnWOSAh2AH026L9w8c18">英語 Vanessa</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=2JecKsbsswE&list=PLzMXToX8KzqgNnm7qjeHR7jFSuaeESFFQ">英語 Lucy</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=3M1UOCKgVhs&list=PLN-ztDeY62dAE8yGu0AeZ6S_7-7HBdaIu">日語 Yuka</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=85qJXvyFrIc&list=PLECz2rpRD3Z0EeOU0z3aoafwgjHyth7MN">韓語 Vicky</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=lf264NlA85M&list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">越南語 Qine</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLcPfCJuIgV5pNIga-dzEZmDTA1x16TO55">英文 Snowei</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLKWcPfZiScgAutnWOSAh2AH026L9w8c18">美英 Vanessa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLzMXToX8KzqgNnm7qjeHR7jFSuaeESFFQ">英英 Lucy</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLD_5T89Ssbn1paEgVqsI4e53b-MDWspTW">澳英 Emma</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLECz2rpRD3Z0EeOU0z3aoafwgjHyth7MN">韓語 Vicky</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">越南語 Qine</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
@@ -71,12 +71,12 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>競程</h2>
-                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
                 <p><a target="_blank" href="https://usaco.guide/">USACO Guide</a></p>
-                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Meta Hacker Cup</a></p>
                 <p><a target="_blank" href="https://judge.u-aizu.ac.jp/onlinejudge/">Aizu Online Judge</a></p>
                 <p><a target="_blank" href="https://atcoder.jp/">AtCoder</a></p>
                 <p><a target="_blank" href="https://codeforces.com/">Codeforces</a></p>
+                <p><a target="_blank" href="https://leetcode.com/">LeetCode</a></p>
+                <p><a target="_blank" href="https://www.facebook.com/codingcompetitions/hacker-cup">Hacker Cup</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
@@ -107,9 +107,19 @@
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>外語 101</h2>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLneZiE_zP2-whqrn6nLB06yY4z9RM7Mwg">漢語 Rui</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLPSfPyOOcp3Qbu6DT536Y1IkcRLSLbHty">日語 Risa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLtJL6GKh6j0WGGvMlwbyPnBpGj-2mDIOi">法語 Lya</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL_knbQpx9pBdjGxbkydtr4VxmQNJyKcyN">俄語 Katya</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL_bC0YvGkS4T6lxT5s4fjqccyy0GU9RMx">西語 Rosa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLzQlC9ppbvya0FCPHL00GBYLY_Ou7hC6w">葡語 Jade</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=4c6tZv4vxDo&list=PL41R2vH_CL438IdCl6fo74Ygsp9Eb2nr6">肯德拉英語</a></p>
+                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
                 <p><a target="_blank" href="https://www.u-movie.com.tw/cinema/page.php?page_type=now">環球影城</a></p>
                 <p><a target="_blank" href="https://www.vscinemas.com.tw/theater/detail.aspx?id=18">威秀影城</a></p>
             </div>
