--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>KPOP II</h2>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3oP0XWAUBtA3ayoeVSwP-">Solo</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">NewJeans</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LRprpMqFJtEnLQL2bCjWMn">Collection</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Live</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LRprpMqFJtEnLQL2bCjWMn">KPOP Collection</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3oP0XWAUBtA3ayoeVSwP-">KPOP Solo</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">KPOP Live</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
