--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>AI</h2>
-                <p><a target="_blank" href="https://auth.openai.com/log-in">ChatGPT</a></p>
+                <p><a target="_blank" href="https://auth.openai.com/log-in-or-create-account">ChatGPT</a></p>
                 <p><a target="_blank" href="https://gemini.google.com/app">Gemini</a></p>
                 <p><a target="_blank" href="https://accounts.x.ai/sign-in">Grok</a></p>
                 <p><a target="_blank" href="https://claude.ai/login">Claude</a></p>
