--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?241104">
+    <link rel="stylesheet" href="/static/main.css?250825">
 </head>
 <body class="body-main">
     <div class="jumbotron-main">
@@ -81,7 +81,7 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>AI</h2>
-                <p><a target="_blank" href="https://auth.openai.com/log-in-or-create-account">ChatGPT</a></p>
+                <p><a target="_blank" href="https://chatgpt.com/">ChatGPT</a></p>
                 <p><a target="_blank" href="https://gemini.google.com/app">Gemini</a></p>
                 <p><a target="_blank" href="https://accounts.x.ai/sign-in">Grok</a></p>
                 <p><a target="_blank" href="https://claude.ai/login">Claude</a></p>
