--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLzMXToX8KzqgNnm7qjeHR7jFSuaeESFFQ">英英 Lucy</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLD_5T89Ssbn1paEgVqsI4e53b-MDWspTW">澳英 Emma</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLt3vxY3ZDG6nGvFAvJTmqWFL8t1zA-7ia">韓文 仁愛</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">越南語 小薇</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLLKWqByw5sEnvzpG8loUbA2rtVIMa_kae">越南 小薇</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
