--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
                 <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/watch?v=P5hnKwCvCxE&list=PLUsk1io_my_IoriVX745NC4C4_iQnLGGy">VOGUE Taiwan</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IoriVX745NC4C4_iQnLGGy">VOGUE Taiwan</a></p>
                 <p><a target="_blank" href="https://www.u-movie.com.tw/cinema/page.php?page_type=now">環球影城</a></p>
                 <p><a target="_blank" href="https://www.vscinemas.com.tw/theater/detail.aspx?id=18">威秀影城</a></p>
             </div>
