--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>KPOP I</h2>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IiSbiYJZT21e1a0BYfywz8">THE FIRST TAKE</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">i-dle</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">IVE</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3SBBuk4ep4jrkO8T8CB_w">BABYMONSTER</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KF8L55oqSkClNuVZBbu5sf">ITZY</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">aespa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">18 i-dle</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KF8L55oqSkClNuVZBbu5sf">19 ITZY</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">20 aespa</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">21 IVE</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3SBBuk4ep4jrkO8T8CB_w">23 BABYMONSTER</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
@@ -101,9 +101,9 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>KPOP II</h2>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">16 BLACKPINK</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">22 NewJeans</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Ly_O_6665n-4A8S_GGxIXS">ORIGINAL</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">NewJeans</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LRprpMqFJtEnLQL2bCjWMn">Collection</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Live</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3oP0XWAUBtA3ayoeVSwP-">Solo</a></p>
