--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>KPOP I</h2>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IiSbiYJZT21e1a0BYfywz8">THE FIRST TAKE</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">18 i-dle</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KF8L55oqSkClNuVZBbu5sf">19 ITZY</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">20 aespa</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">21 IVE</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3SBBuk4ep4jrkO8T8CB_w">23 BABYMONSTER</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">i-dle</a> <small>(18)</small></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">IVE</a> <small>(21)</small></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3SBBuk4ep4jrkO8T8CB_w">BABYMONSTER</a> <small>(23)</small></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KF8L55oqSkClNuVZBbu5sf">ITZY</a> <small>(19)</small></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">aespa</a> <small>(20)</small></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
@@ -101,8 +101,8 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>KPOP II</h2>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">16 BLACKPINK</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">22 NewJeans</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a> <small>(16)</small></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">NewJeans</a> <small>(22)</small></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Ly_O_6665n-4A8S_GGxIXS">ORIGINAL</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LRprpMqFJtEnLQL2bCjWMn">Collection</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Live</a></p>
@@ -122,7 +122,6 @@
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>其它</h2>
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
-                <p><a target="_blank" href="https://web.ntnu.edu.tw/~algo/">演算法筆記</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IoriVX745NC4C4_iQnLGGy">VOGUE Taiwan</a></p>
                 <p><a target="_blank" href="https://www.u-movie.com.tw/cinema/page.php?page_type=now">環球影城</a></p>
                 <p><a target="_blank" href="https://www.vscinemas.com.tw/theater/detail.aspx?id=18">威秀影城</a></p>
