--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>KPOP II</h2>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a> <small>(16)</small></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">NewJeans</a> <small>(22)</small></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Live 232425</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">Live 202122</a> <small>(22)</small></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Ly_O_6665n-4A8S_GGxIXS">ORIGINAL</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LRprpMqFJtEnLQL2bCjWMn">Collection</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Live</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3oP0XWAUBtA3ayoeVSwP-">Solo</a></p>
             </div>
 
