--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>KPOP I</h2>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IiSbiYJZT21e1a0BYfywz8">THE FIRST TAKE</a></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">i-dle</a> <small>(18)</small></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">IVE</a> <small>(21)</small></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3SBBuk4ep4jrkO8T8CB_w">BABYMONSTER</a> <small>(23)</small></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KF8L55oqSkClNuVZBbu5sf">ITZY</a> <small>(19)</small></p>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">aespa</a> <small>(20)</small></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L99NZAkimrzrTsgr-LPR2C">i-dle</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KAcArRfS0By49wAAFGXMmN">IVE</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_L3SBBuk4ep4jrkO8T8CB_w">BABYMONSTER</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_KF8L55oqSkClNuVZBbu5sf">ITZY</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_LG_Ocihan1cHakC6EG8-_H">aespa</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
@@ -101,7 +101,7 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>KPOP II</h2>
-                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a> <small>(16)</small></p>
+                <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IFcQ2x_1zaCg_hgwJNtlE7">BLACKPINK</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_JberdJj6Vz4WWE_uPx1QR6">Live 232425</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Lg418eIpeGdM0dSy7jT5zm">Live 202122</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_Ly_O_6665n-4A8S_GGxIXS">ORIGINAL</a></p>
