revert to last version

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>AI</h2>
+                <p><a target="_blank" href="https://chatgpt.com/">ChatGPT</a></p>
+                <p><a target="_blank" href="https://gemini.google.com/app">Gemini</a></p>
+                <p><a target="_blank" href="https://accounts.x.ai/sign-in">Grok</a></p>
+                <p><a target="_blank" href="https://claude.ai/login">Claude</a></p>
+                <p><a target="_blank" href="https://www.perplexity.ai/">Perplexity</a></p>
+                <p><a target="_blank" href="https://copilot.microsoft.com/login">Copilot</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>學習</h2>
                 <p><a target="_blank" href="https://activity.books.com.tw/books66/">博客來66折</a></p>
                 <p><a target="_blank" href="https://www.coursera.org/">Coursera</a></p>
@@ -107,6 +117,16 @@
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL_knbQpx9pBdjGxbkydtr4VxmQNJyKcyN">俄語 Katya</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL_bC0YvGkS4T6lxT5s4fjqccyy0GU9RMx">西語 Rosa</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLzQlC9ppbvya0FCPHL00GBYLY_Ou7hC6w">葡語 Jade</a></p>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-sm-6">
+                <h2>YouTuber</h2>
+                <p><a target="_blank" href="https://www.youtube.com/@happyariel">欸你這週要幹嘛</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@aiko738">愛子在台灣</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@annapl_official">波蘭Anna</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@DOILYLIFE">尹到怡</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@MariaAbe">阿部瑪利亞</a></p>
+                <p><a target="_blank" href="https://www.youtube.com/@mayu__mo7">麻由不是麻油</a></p>
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
