--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 <p><a target="_blank" href="https://ashleyaoligei.github.io/">Ashley Aoligei</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLSdSE7hGx1WpTFKGImY0t-fWrI2UzKyZ0">小學生Python課</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLUsk1io_my_IoriVX745NC4C4_iQnLGGy">VOGUE Taiwan</a></p>
+                <p><a target="_blank" href="https://boshiamy.then.tw/ime">線上嘸蝦米</a></p>
                 <p><a target="_blank" href="https://www.u-movie.com.tw/cinema/page.php?page_type=now">環球影城</a></p>
                 <p><a target="_blank" href="https://www.vscinemas.com.tw/theater/detail.aspx?id=18">威秀影城</a></p>
             </div>
