--- a/food/index.html
+++ b/food/index.html
@@ -9,17 +9,17 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?241104">
+    <link rel="stylesheet" href="/static/main.css?251123">
   </head>
 
-  <body class="body-food">
-    <div class="jumbotron-food">
+  <body class="body-theme4">
+    <div class="jumbotron jumbotron-theme4">
       <div class="container">
-        <h1>Food <small> <a class="text-white smaller" href="/">&#9707;</a> </small> </h1>
+        <h1>Food <a class="text-white smaller" href="/">&#9707;</a> </h1>
       </div>
     </div>
 
-    <div class="container page-food mb-5">
+    <div class="container page-theme4 mb-5">
       <div class="row">
 
         <div class="col-lg-3 col-md-6">
