--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?250825">
+    <link rel="stylesheet" href="/static/main.css?251123">
 </head>
-<body class="body-main">
-    <div class="jumbotron-main">
+<body class="body-theme1">
+    <div class="jumbotron jumbotron-theme1">
         <div class="container">
-            <h1>Main <small> <a class="text-white smaller" href="/misc">&#9714;</a> </small> </h1>
+            <h1>Main <a class="text-white smaller" href="/misc">&#9714;</a> </h1>
         </div>
     </div>
-    <div class="container page-main mb-5">
+    <div class="container page-theme1 mb-5">
         <div class="row">
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>生活</h2>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="col-lg-2 col-md-3 col-sm-6">
-                <h2>AI</h2>
+                <h2>AI 工具</h2>
                 <p><a target="_blank" href="https://chatgpt.com/">ChatGPT</a></p>
                 <p><a target="_blank" href="https://gemini.google.com/app">Gemini</a></p>
                 <p><a target="_blank" href="https://accounts.x.ai/sign-in">Grok</a></p>
@@ -121,7 +121,6 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>YouTuber</h2>
-                <p><a target="_blank" href="https://www.youtube.com/@happyariel">欸你這週要幹嘛</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@aiko738">愛子在台灣</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@annapl_official">波蘭Anna</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@DOILYLIFE">尹到怡</a></p>
