--- a/misc/index.html
+++ b/misc/index.html
@@ -9,17 +9,17 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?241104">
+    <link rel="stylesheet" href="/static/main.css?251123">
   </head>
 
-  <body class="body-misc">
-    <div class="jumbotron-misc">
+  <body class="body-theme2">
+    <div class="jumbotron jumbotron-theme2">
       <div class="container">
-        <h1>Misc <small> <a class="text-white smaller" href="/">&#9707;</a> </small> </h1>
+        <h1>Misc <a class="text-white smaller" href="/">&#9707;</a> </h1>
       </div>
     </div>
 
-    <div class="container page-misc mb-5">
+    <div class="container page-theme2 mb-5">
       <div class="row">
 
         <div class="col-lg-3 col-md-6">
@@ -35,7 +35,6 @@
         <div class="col-lg-3 col-md-6">
           <h2>國內大學</h2>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLMHSr8fseBzUvwjKtR6pX0Vv9Q9H-V3lY">台大孔令傑 - C++程式設計</a></p>
-          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLJV_el3uVTsPz6CTopeRp2L2t4aL_KgiI">台大李宏毅 - 生成式AI導論24</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLj6E8qlqmkFvJuL-gb06J8XHNSj_lfFwP">交大蘇承芳 - 微積分甲(一)</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLj6E8qlqmkFugDslxZrgDRYo9V2D6B6N6">交大蘇承芳 - 微積分甲(二)</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLu3zreQhydbpTXp9KwGX2V0WxrvOm3Fx4">雲科蕭佳明 - ROS基礎教學</a></p>
@@ -52,7 +51,7 @@
         <div class="col-lg-3 col-md-6">
           <h2>程式</h2>
           <p><a target="_blank" href="https://www.dotcpp.com/">C语言网</a></p>
-          <p><a target="_blank" href="https://sprout.tw/algo2024/">資訊之芽算法班</a></p>
+          <p><a target="_blank" href="https://sprout.tw/algo2025/">資訊之芽算法班</a></p>
           <p><a target="_blank" href="https://www.youtube.com/playlist?list=PLVVMQF8vWNCITO9U3h-cVA6nHkdqJEifc">圖解演算法教學</a></p>
           <p><a target="_blank" href="https://github.com/TheAlgorithms/Python">The Algorithms - Python</a></p>
           <p><a target="_blank" href="http://automatetheboringstuff.com/">Automate the Boring Stuff</a></p>
