--- a/misc/eecs.html
+++ b/misc/eecs.html
@@ -9,22 +9,22 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?241028">
+    <link rel="stylesheet" href="/static/main.css?251123">
 
   </head>
 
-  <body class="body-misc">
-    <div class="jumbotron-misc">
+  <body class="body-theme2">
+    <div class="jumbotron jumbotron-theme2">
       <div class="container">
-        <h1>中學電資 <small> <a class="text-white smaller" href="/misc">&#9712;</a> </small> </h1>
+        <h1>中學電資 <a class="text-white smaller" href="/misc">&#9712;</a> </h1>
       </div>
     </div>
 
-    <div class="container page-misc mb-5">
+    <div class="container page-theme2 mb-5">
       <div class="row">
 
         <div class="col-lg-6 col-md-12">
-          <h3 class="mt-3 fw-bold">C++程式設計</h3>
+          <h2 class="mt-3 fw-bold">C++程式設計</h2>
           <ul class="outline">
             <li><a href="https://www.youtube.com/watch?v=1n9eiDGjdCc&list=PLI6pJZaOCtF18Vdwq24Mw42qKCRACZzsJ" target="_blank">變數、資料型態與運算子</a></li>
             <li><a href="https://www.youtube.com/watch?v=d2js54wtYik&list=PLI6pJZaOCtF1reAKJ2Jegvx1EXLKMuBEV" target="_blank">基本輸入與輸出</a></li>
@@ -47,66 +47,66 @@
         </div>
 
         <div class="col-lg-6 col-md-12">
-          <h3 class="mt-3 fw-bold">基本電學</h3>
+          <h2 class="mt-3 fw-bold">基本電學</h2>
           <ul class="outline">
-            <li><a href="https://www.youtube.com/watch?v=j-Vo6ORclzA&list=PLI6pJZaOCtF0w-9SkPuU_G9Vt2Ln6Dnbx" target="_blank">第一章-電的基本概念</a></li>
-            <li><a href="https://www.youtube.com/watch?v=HBMRyiWRwQ8&list=PLI6pJZaOCtF1NNpY6uoZ3V28wtYXVi_Zg" target="_blank">第二章-電阻</a></li>
-            <li><a href="https://www.youtube.com/watch?v=bde1bGlsrrM&list=PLI6pJZaOCtF0Y1Thyyq1jf6PKl7xLO8O4" target="_blank">第三章-串並聯電路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=57f85pGbiwQ&list=PLI6pJZaOCtF0NGtikOk2Y9q1LgoGUEcBR" target="_blank">第四章-直流迴路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=33C-NaLeRr0&list=PLI6pJZaOCtF3CA6evWdrk2GvT34_c-41h" target="_blank">第五章-電容與靜電</a></li>
-            <li><a href="https://www.youtube.com/watch?v=b6pIfQnERaQ&list=PLI6pJZaOCtF1l2mmP4gVmz5SeiO_cq5OL" target="_blank">第六章-電感與電磁</a></li>
-            <li><a href="https://www.youtube.com/watch?v=pAi6Hs_dWkc&list=PLI6pJZaOCtF3DK5ubqrT-YtMi_UhqckqH" target="_blank">第七章-直流暫態</a></li>
-            <li><a href="https://www.youtube.com/watch?v=A38rHAWU4xM&list=PLI6pJZaOCtF1ukJq1hS8aWt8XWrE1TYI4" target="_blank">第八章-交流電</a></li>
-            <li><a href="https://www.youtube.com/watch?v=BP2W7WRkevs&list=PLI6pJZaOCtF17onXn7r2Ct4DZzYXrkPnV" target="_blank">第九章-基本交流電路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=BWNkPlEXVRU&list=PLI6pJZaOCtF0ID0rjyEbhUnorvSKnmxMz" target="_blank">第十章-交流電功率</a></li>
-            <li><a href="https://www.youtube.com/watch?v=BaLebw80foA&list=PLI6pJZaOCtF16sA9_LDC4ASEKwnZIu3-7" target="_blank">第十一章-諧振電路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=f4NQUC3yIw0&list=PLI6pJZaOCtF1EDSuiWrf9k3rm4Uflpcp_" target="_blank">第十二章-交流電源</a></li>
+            <li><a href="https://www.youtube.com/watch?v=j-Vo6ORclzA&list=PLI6pJZaOCtF0w-9SkPuU_G9Vt2Ln6Dnbx" target="_blank">電的基本概念</a></li>
+            <li><a href="https://www.youtube.com/watch?v=HBMRyiWRwQ8&list=PLI6pJZaOCtF1NNpY6uoZ3V28wtYXVi_Zg" target="_blank">電阻</a></li>
+            <li><a href="https://www.youtube.com/watch?v=bde1bGlsrrM&list=PLI6pJZaOCtF0Y1Thyyq1jf6PKl7xLO8O4" target="_blank">串並聯電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=57f85pGbiwQ&list=PLI6pJZaOCtF0NGtikOk2Y9q1LgoGUEcBR" target="_blank">直流迴路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=33C-NaLeRr0&list=PLI6pJZaOCtF3CA6evWdrk2GvT34_c-41h" target="_blank">電容與靜電</a></li>
+            <li><a href="https://www.youtube.com/watch?v=b6pIfQnERaQ&list=PLI6pJZaOCtF1l2mmP4gVmz5SeiO_cq5OL" target="_blank">電感與電磁</a></li>
+            <li><a href="https://www.youtube.com/watch?v=pAi6Hs_dWkc&list=PLI6pJZaOCtF3DK5ubqrT-YtMi_UhqckqH" target="_blank">直流暫態</a></li>
+            <li><a href="https://www.youtube.com/watch?v=A38rHAWU4xM&list=PLI6pJZaOCtF1ukJq1hS8aWt8XWrE1TYI4" target="_blank">交流電</a></li>
+            <li><a href="https://www.youtube.com/watch?v=BP2W7WRkevs&list=PLI6pJZaOCtF17onXn7r2Ct4DZzYXrkPnV" target="_blank">基本交流電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=BWNkPlEXVRU&list=PLI6pJZaOCtF0ID0rjyEbhUnorvSKnmxMz" target="_blank">交流電功率</a></li>
+            <li><a href="https://www.youtube.com/watch?v=BaLebw80foA&list=PLI6pJZaOCtF16sA9_LDC4ASEKwnZIu3-7" target="_blank">諧振電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=f4NQUC3yIw0&list=PLI6pJZaOCtF1EDSuiWrf9k3rm4Uflpcp_" target="_blank">交流電源</a></li>
           </ul>
         </div>
 
         <div class="col-lg-6 col-md-12">
-          <h3 class="mt-3 fw-bold">數位邏輯</h3>
+          <h2 class="mt-3 fw-bold">數位邏輯</h2>
           <ul class="outline">
-            <li><a href="https://www.youtube.com/watch?v=s7B4I6nJhzw&list=PLI6pJZaOCtF35s4iK61M21vOFcAuWdS5S" target="_blank">第一章-概論</a></li>
-            <li><a href="https://www.youtube.com/watch?v=DN3aWVScL_Q&list=PLI6pJZaOCtF0IJiRiGyCMMEqPu-x9T2va" target="_blank">第二章-數字系統</a></li>
-            <li><a href="https://www.youtube.com/watch?v=ScCdax2dVOw&list=PLI6pJZaOCtF0VCFyeDd9jVx-XZsFFCzms" target="_blank">第三章-基本邏輯閘</a></li>
-            <li><a href="https://www.youtube.com/watch?v=C72X8qkGKng&list=PLI6pJZaOCtF0fGVEbal0S37jh5csiMAt2" target="_blank">第四章-布林代數及第摩根定理</a></li>
-            <li><a href="https://www.youtube.com/watch?v=XEPTdb95CrQ&list=PLI6pJZaOCtF2SOiWesnxvRYDs98FfhuT6" target="_blank">第五章-布林函數化簡</a></li>
-            <li><a href="https://www.youtube.com/watch?v=wQ5n6xPYydY&list=PLI6pJZaOCtF2tJIQ2ASseHZAIQciDlyjl" target="_blank">第六章-組合邏輯電路之設計及應用</a></li>
-            <li><a href="https://www.youtube.com/watch?v=3_sK3UkncJE&list=PLI6pJZaOCtF1PDGIzAnbFoWaoT4rpX2Ux" target="_blank">第七章-正反器</a></li>
-            <li><a href="https://www.youtube.com/watch?v=6QZSNSevSA4&list=PLI6pJZaOCtF2Qbr7ZGz0WR00K-EUKmLDY" target="_blank">第八章-循序邏輯電路之設計與應用</a></li>
+            <li><a href="https://www.youtube.com/watch?v=s7B4I6nJhzw&list=PLI6pJZaOCtF35s4iK61M21vOFcAuWdS5S" target="_blank">概論</a></li>
+            <li><a href="https://www.youtube.com/watch?v=DN3aWVScL_Q&list=PLI6pJZaOCtF0IJiRiGyCMMEqPu-x9T2va" target="_blank">數字系統</a></li>
+            <li><a href="https://www.youtube.com/watch?v=ScCdax2dVOw&list=PLI6pJZaOCtF0VCFyeDd9jVx-XZsFFCzms" target="_blank">基本邏輯閘</a></li>
+            <li><a href="https://www.youtube.com/watch?v=C72X8qkGKng&list=PLI6pJZaOCtF0fGVEbal0S37jh5csiMAt2" target="_blank">布林代數及第摩根定理</a></li>
+            <li><a href="https://www.youtube.com/watch?v=XEPTdb95CrQ&list=PLI6pJZaOCtF2SOiWesnxvRYDs98FfhuT6" target="_blank">布林函數化簡</a></li>
+            <li><a href="https://www.youtube.com/watch?v=wQ5n6xPYydY&list=PLI6pJZaOCtF2tJIQ2ASseHZAIQciDlyjl" target="_blank">組合邏輯電路之設計及應用</a></li>
+            <li><a href="https://www.youtube.com/watch?v=3_sK3UkncJE&list=PLI6pJZaOCtF1PDGIzAnbFoWaoT4rpX2Ux" target="_blank">正反器</a></li>
+            <li><a href="https://www.youtube.com/watch?v=6QZSNSevSA4&list=PLI6pJZaOCtF2Qbr7ZGz0WR00K-EUKmLDY" target="_blank">循序邏輯電路之設計與應用</a></li>
           </ul>
         </div>
 
         <div class="col-lg-6 col-md-12">
-          <h3 class="mt-3 fw-bold">電子學</h3>
+          <h2 class="mt-3 fw-bold">電子學</h2>
           <ul class="outline">
-            <li><a href="https://www.youtube.com/watch?v=c55rQl5wJKA&list=PLI6pJZaOCtF1z2HEHIl8j1KHwmgQIbCtc" target="_blank">第一章-概論</a></li>
-            <li><a href="https://www.youtube.com/watch?v=fPbgnKcvdqE&list=PLI6pJZaOCtF0cxI0eZtN5-E4itBZl7skN" target="_blank">第二章-二極體</a></li>
-            <li><a href="https://www.youtube.com/watch?v=Wk92W-fsbcs&list=PLI6pJZaOCtF3KvvbI2rSmnGplDNLFxm_t" target="_blank">第三章-二極體之應用電路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=upe1T1023yo&list=PLI6pJZaOCtF3BGm_O2f4Xy2La0zJ4-4lJ" target="_blank">第四章-雙極性接面電晶體</a></li>
-            <li><a href="https://www.youtube.com/watch?v=v05MUfRPWz4&list=PLI6pJZaOCtF380WwFNujVyF2MRUYaJTrz" target="_blank">第五章-電晶體之直流偏壓電路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=7AXftiXHofs&list=PLI6pJZaOCtF1atmje9dshKLYw7AZz8VNw" target="_blank">第六章-電晶體放大電路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=sLvZCSn6lcQ&list=PLI6pJZaOCtF20FFXys2247s8DcpwpouVj" target="_blank">第七章-串級放大電路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=dzu2Pp8It-s&list=PLI6pJZaOCtF2sGuG-Zc5lxDtApU_GWHI1" target="_blank">第八章-場效電晶體</a></li>
-            <li><a href="https://www.youtube.com/watch?v=jxwPysYCMZQ&list=PLI6pJZaOCtF2bt_3TiaSm6lFn6zoauFTh" target="_blank">第九章-場效電晶體放大電路</a></li>
-            <li><a href="https://www.youtube.com/watch?v=VGcAkTpmRkY&list=PLI6pJZaOCtF2M2c88OYrWa4VLGfsB1dFU" target="_blank">第十章-運算放大器</a></li>
-            <li><a href="https://www.youtube.com/watch?v=AQ5XTRY5Vo8&list=PLI6pJZaOCtF2eTSOxxTL8qwH1RjFXKAel" target="_blank">第十一章-基本振盪電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=c55rQl5wJKA&list=PLI6pJZaOCtF1z2HEHIl8j1KHwmgQIbCtc" target="_blank">概論</a></li>
+            <li><a href="https://www.youtube.com/watch?v=fPbgnKcvdqE&list=PLI6pJZaOCtF0cxI0eZtN5-E4itBZl7skN" target="_blank">二極體</a></li>
+            <li><a href="https://www.youtube.com/watch?v=Wk92W-fsbcs&list=PLI6pJZaOCtF3KvvbI2rSmnGplDNLFxm_t" target="_blank">二極體之應用電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=upe1T1023yo&list=PLI6pJZaOCtF3BGm_O2f4Xy2La0zJ4-4lJ" target="_blank">雙極性接面電晶體</a></li>
+            <li><a href="https://www.youtube.com/watch?v=v05MUfRPWz4&list=PLI6pJZaOCtF380WwFNujVyF2MRUYaJTrz" target="_blank">電晶體之直流偏壓電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=7AXftiXHofs&list=PLI6pJZaOCtF1atmje9dshKLYw7AZz8VNw" target="_blank">電晶體放大電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=sLvZCSn6lcQ&list=PLI6pJZaOCtF20FFXys2247s8DcpwpouVj" target="_blank">串級放大電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=dzu2Pp8It-s&list=PLI6pJZaOCtF2sGuG-Zc5lxDtApU_GWHI1" target="_blank">場效電晶體</a></li>
+            <li><a href="https://www.youtube.com/watch?v=jxwPysYCMZQ&list=PLI6pJZaOCtF2bt_3TiaSm6lFn6zoauFTh" target="_blank">場效電晶體放大電路</a></li>
+            <li><a href="https://www.youtube.com/watch?v=VGcAkTpmRkY&list=PLI6pJZaOCtF2M2c88OYrWa4VLGfsB1dFU" target="_blank">運算放大器</a></li>
+            <li><a href="https://www.youtube.com/watch?v=AQ5XTRY5Vo8&list=PLI6pJZaOCtF2eTSOxxTL8qwH1RjFXKAel" target="_blank">基本振盪電路</a></li>
           </ul>
         </div>
 
         <div class="col-lg-6 col-md-12">
-          <h3 class="mt-3 fw-bold">電工機械</h3>
+          <h2 class="mt-3 fw-bold">電工機械</h2>
           <ul class="outline">
-            <li><a href="https://www.youtube.com/watch?v=sF69mefb3CM&list=PLI6pJZaOCtF1HQmMK_jdGp226Hn7bQ4cP" target="_blank">第一章-概論</a></li>
-            <li><a href="https://www.youtube.com/watch?v=dmRRVmVRbwg&list=PLI6pJZaOCtF0gl2CHrMDAqGrV-G8B-JAP" target="_blank">第二章-直流發電機</a></li>
-            <li><a href="https://www.youtube.com/watch?v=HFJJllRLZA8&list=PLI6pJZaOCtF0F5kp6S5o9NLi5V2-jTEKv" target="_blank">第三章-直流電動機</a></li>
-            <li><a href="https://www.youtube.com/watch?v=7xJHgn6SJE8&list=PLI6pJZaOCtF2_xI9mHwkJGvhoA7pOaB5l" target="_blank">第四章-變壓器</a></li>
-            <li><a href="https://www.youtube.com/watch?v=YY1ZiufMlQQ&list=PLI6pJZaOCtF3iCW-dUE3CZU_Z8RaY-5WQ" target="_blank">第五章-三相感應電動機</a></li>
-            <li><a href="https://www.youtube.com/watch?v=206_idhP2NU&list=PLI6pJZaOCtF2qlTlCHHEcUNRVTWaJdwap" target="_blank">第六章-單相感應電動機</a></li>
-            <li><a href="https://www.youtube.com/watch?v=hA6hXZBvssY&list=PLI6pJZaOCtF2DQHeGBl7Av4BgDM8Uyb6e" target="_blank">第七章-同步發電機</a></li>
-            <li><a href="https://www.youtube.com/watch?v=fhkSY0vC9LE&list=PLI6pJZaOCtF0GBiJ2455HFLocNBdsclJt" target="_blank">第八章-同步電動機</a></li>
-            <li><a href="https://www.youtube.com/watch?v=oZXqEQ69QDs&list=PLI6pJZaOCtF12rRAl4OPG3geOAbEJJaTi" target="_blank">第九章-特殊電機</a></li>
+            <li><a href="https://www.youtube.com/watch?v=sF69mefb3CM&list=PLI6pJZaOCtF1HQmMK_jdGp226Hn7bQ4cP" target="_blank">概論</a></li>
+            <li><a href="https://www.youtube.com/watch?v=dmRRVmVRbwg&list=PLI6pJZaOCtF0gl2CHrMDAqGrV-G8B-JAP" target="_blank">直流發電機</a></li>
+            <li><a href="https://www.youtube.com/watch?v=HFJJllRLZA8&list=PLI6pJZaOCtF0F5kp6S5o9NLi5V2-jTEKv" target="_blank">直流電動機</a></li>
+            <li><a href="https://www.youtube.com/watch?v=7xJHgn6SJE8&list=PLI6pJZaOCtF2_xI9mHwkJGvhoA7pOaB5l" target="_blank">變壓器</a></li>
+            <li><a href="https://www.youtube.com/watch?v=YY1ZiufMlQQ&list=PLI6pJZaOCtF3iCW-dUE3CZU_Z8RaY-5WQ" target="_blank">三相感應電動機</a></li>
+            <li><a href="https://www.youtube.com/watch?v=206_idhP2NU&list=PLI6pJZaOCtF2qlTlCHHEcUNRVTWaJdwap" target="_blank">單相感應電動機</a></li>
+            <li><a href="https://www.youtube.com/watch?v=hA6hXZBvssY&list=PLI6pJZaOCtF2DQHeGBl7Av4BgDM8Uyb6e" target="_blank">同步發電機</a></li>
+            <li><a href="https://www.youtube.com/watch?v=fhkSY0vC9LE&list=PLI6pJZaOCtF0GBiJ2455HFLocNBdsclJt" target="_blank">同步電動機</a></li>
+            <li><a href="https://www.youtube.com/watch?v=oZXqEQ69QDs&list=PLI6pJZaOCtF12rRAl4OPG3geOAbEJJaTi" target="_blank">特殊電機</a></li>
           </ul>
         </div>
 
