--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
             <div class="col-lg-2 col-md-3 col-sm-6">
                 <h2>YouTuber</h2>
+                <p><a target="_blank" href="https://www.youtube.com/@LenaPatrickTaiwan">旅遊真台灣</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@aiko738">愛子在台灣</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@annapl_official">波蘭Anna</a></p>
                 <p><a target="_blank" href="https://www.youtube.com/@DOILYLIFE">尹到怡</a></p>
