--- a/misc/index.html
+++ b/misc/index.html
@@ -94,7 +94,10 @@
           <p><a target="_blank" href="https://www.investopedia.com/simulator/">Investopedia Stock Simulator</a></p>
 
           <h2>其它</h2>
-          <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj-inRiUwiV4-CtARX9GTIix">VSD膜邊型5.25mm</a></p>
+          <p><a target="_blank" href="/misc/vsd230428">VSD諮詢 - 230428</a></p>
+          <p><a target="_blank" href="/misc/vsd250627">VSD諮詢 - 250627</a></p>
+          <p><a target="_blank" href="/misc/vsd23vs25">VSD比較 - 23vs25</a></p>
+          <!-- <p><a target="_blank" href="https://www.youtube.com/playlist?list=PL0fd7lJVVfj-inRiUwiV4-CtARX9GTIix">YT心室中膈缺損</a></p> -->
         </div>
 
         <div class="col-lg-3 col-md-6">
